# ks

./: .gitignore  .pre-commit-config.yaml  Pull.xlsx  Rech_sum.xlsx  Rechnungssummen.py  Rose.xlsx  create_model.py  create_modle.py  data.csv  genre_desc.py  main.py  model.py  oeffnen_db.py  pyproject.toml  refactor.py  refactor_sqlmodel.py  report.py  suchwort.py  test.py  test_model.py
src/: main.py
src/command/: command.py  show_table_command.py
src/extractor/: extractor.py
src/facade/: csv.py  json.py
src/factory/: factories.py
src/helper/: create_model.py  helperlib.py
src/helper/model/: base.py  container.py  create_model.py  db_connection.py  model_creator.py  sqlite_connection.py  table.py
src/model/: model.py
src/parser/: option_parser.py  parser.py
src/sqlite/: sqlitedatabase.py
tests/unittests/: test_create_model.py
