[tool.poetry]
name = "ks"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <markus.iorio@centralnic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
flake8 = "^5.0.4"
bandit = "^1.7.4"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
